Fixed spacing

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,4 +1,8 @@
 .contact-container {
+  @media only screen and (max-width: 600px) {
+    padding:3rem 0;
+  }
+
   p {
     text-align: center;
     max-width: 1000px;
@@ -16,13 +20,17 @@
     padding: 1rem 4rem;
     border-radius: 0.5rem;
     cursor: pointer;
+    @media only screen and (max-width: 600px) {
+      font-size: 1.1rem;
+      padding: 0.6rem 1.7rem;
+    }
   }
 }
 .contact {
   row-gap: 1.5rem;
   h1 {
     @media only screen and (max-width: 600px) {
-      width:100%;
+      width: 100%;
       text-align: center;
     }
   }
