--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -16,6 +16,6 @@
         width:85%;
     }
     @media only screen and (max-width: 600px) {
-        width:85%;
+        width:95%;
     }
 }
