--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -3,8 +3,13 @@
   top: 6rem;
 }
 .projects {
+  @media only screen and (max-width: 600px) {
+  }
 }
 .projects-title {
+  @media only screen and (max-width: 600px) {
+    padding-bottom: 1rem;
+  }
 }
 
 .project-container {
@@ -16,6 +21,7 @@
     flex-direction: column;
     justify-content: flex-start;
     margin-bottom: 0rem;
+    margin-top: 0;
   }
 }
 .project-tag {
@@ -35,9 +41,9 @@
   width: 600px;
   row-gap: 1rem;
   justify-content: space-between;
-  -moz-box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-  box-sizing:border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   @media only screen and (max-width: 1300px) {
     width: 550px;
     row-gap: 0.5rem;
@@ -52,14 +58,15 @@
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     position: relative;
-    width:100%;
-    left:0;
-    right:0;
+    width: 100%;
+    left: 0;
+    right: 0;
   }
   h2 {
     font-size: 2rem;
     @media only screen and (max-width: 600px) {
       font-size: 1.5rem;
+      font-weight: bold;
     }
   }
   p {
@@ -107,7 +114,7 @@
       width: 600px;
     }
     @media only screen and (max-width: 600px) {
-      width:100%;
+      width: 100%;
     }
   }
 }
